buildscript {
    dependencies {
        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
    }
}

plugins {
    id 'java'
}

apply plugin: "com.github.johnrengelman.shadow"
group 'dk.research'
version '1.0-SNAPSHOT'

sourceCompatibility = 17
targetCompatibility = "17"

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    implementation group: 'junit', name: 'junit', version: '4.12'
    implementation group: 'org.semanticweb.yars', name: 'nxparser', version: '4.0.0', ext: 'pom'
    implementation group: 'org.semanticweb.yars', name: 'nxparser-model', version: '4.0.0'
    implementation group: 'org.semanticweb.yars', name: 'nxparser-parsers', version: '4.0.0'
    implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation 'gr.james:random-sampling:0.16'
    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-model', version: '3.6.2'
    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-turtle', version: '3.6.2'

    // These are for RDF4J and GraphDB
    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-repository-sparql', version: '3.0.0'
    implementation group: 'com.ontotext.graphdb', name: 'graphdb-free-runtime', version: '9.3.0'

    implementation "org.neo4j:neo4j:4.3.2"

    // https://mvnrepository.com/artifact/org.neo4j/neo4j-bolt
    testImplementation group: 'org.neo4j', name: 'neo4j-bolt', version: '4.3.3'

    // https://mvnrepository.com/artifact/org.neo4j.driver/neo4j-java-driver
    implementation group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '4.3.4'

    // https://mvnrepository.com/artifact/com.baqend/bloom-filter
    //implementation group: 'com.baqend', name: 'bloom-filter', version: '2.2.4'

    // https://mvnrepository.com/artifact/com.opencsv/opencsv
    implementation group: 'com.opencsv', name: 'opencsv', version: '5.5.1'

    //implementation files('address/file.jar')
    // Customized turtle-formatter
    implementation files('libs/turtle-formatter-snapshot.jar')
    //    implementation("org.apache.jena:jena-arq:4.3.2")
    //    implementation("org.apache.jena:jena-core:4.2.0")

    // https://mvnrepository.com/artifact/org.apache.jena/jena-shacl
    implementation group: 'org.apache.jena', name: 'jena-shacl', version: '4.6.1'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    //    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-rdf-api
    //    implementation group: 'org.apache.commons', name: 'commons-rdf-api', version: '0.5.0'

    // https://mvnrepository.com/artifact/org.topbraid/shacl
    implementation group: 'org.topbraid', name: 'shacl', version: '1.4.2'
}

// Include all resources and config in the JAR
processResources {
    // Copy config.properties to resources root (not in subfolder)
    from('.') {
        include 'config.properties'
    }
    // Copy all config files
    from('config') {
        into 'config'
    }
    // Copy all data files (for embedded defaults)
    from('data') {
        into 'data'
    }
    // Copy all resource files from src/main/resources (if they exist)
    from('src/main/resources') {
        into '.'
    }
}

shadowJar {
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'cs.Main'
    }
    zip64 true
    archiveBaseName = 'kg2pg'
    archiveClassifier = ''
    archiveVersion = ''
}

test {
    useJUnitPlatform()
}